from __future__ import annotations

from datetime import datetime, date, time
from decimal import Decimal
from typing import Any, Optional, List, ClassVar

import sqlalchemy as sa
from sqlalchemy import ForeignKey, UniqueConstraint, text
from sqlalchemy.orm import Mapped, mapped_column, relationship

from OSSS.db.base import Base, UUIDMixin, GUID, JSONB

class Tag(UUIDMixin, Base):
    __tablename__ = "tags"
    __allow_unmapped__ = True  # keep NOTE out of the SQLAlchemy mapper

    NOTE: ClassVar[str] =     (
        "owner=division_of_technology_data; "
        "description=Stores tags records for the application. "
        "Includes standard audit timestamps (created_at, updated_at). "
        "4 column(s) defined. "
        "Primary key is `id`."
    )

    __table_args__ = {
        "comment":         (
            "Stores tags records for the application. "
            "Includes standard audit timestamps (created_at, updated_at). "
            "4 column(s) defined. "
            "Primary key is `id`."
        ),
        "info": {
            "note": NOTE,
            "description":         (
            "Stores tags records for the application. "
            "Includes standard audit timestamps (created_at, updated_at). "
            "4 column(s) defined. "
            "Primary key is `id`."
        ),
        },
    }


    label: Mapped[str] = mapped_column(sa.String(80), unique=True, nullable=False)


